fixed linking with std math library, and added vim swp files to gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ add_library(KL2 STATIC
 )
 set(CMAKE_CXX_STANDARD 17 CACHE STRING "C++ standart")
 
-target_link_libraries(KL2 PUBLIC stdc++)
+target_link_libraries(KL2 PUBLIC stdc++ m)
 
 target_include_directories(KL2 PRIVATE ${PROJECT_SOURCE_DIR})
 
